--- a/src/index.css
+++ b/src/index.css
@@ -164,12 +164,13 @@ h2 {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding: 10%;
+	display: block;
 }
 
 .card-back img {
-	max-width: 100%;
-	max-height: 100%;
+	width: 100%;
+	height: 100%;
+	display: block;
 }
 
 .shadow {
