--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
 	src: url(./fonts/LEMONMILKPro-Bold.otf);
 }
 @font-face {
-	font-family: 'Futura-Light';
-	src: url(./fonts/futural.ttf);
+	font-family: 'Futura-Medium';
+	src: url(./fonts/futuram.ttf);
 }
 
 :root {
@@ -30,22 +30,29 @@ body {
 	margin: 0;
 	display: flex;
 	place-items: center;
-	width: 100vw;
-	height: 100vh;
 	user-select: none;
-}
-
-#root {
-	max-width: 1280px;
-	margin: 0 auto;
-	padding: 0;
-	text-align: center;
-	box-sizing: border-box;
-	width: 100vw;
-	height: 100vh;
 	overflow: hidden;
 }
 
+.container {
+	position: fixed;
+	transform: rotate(-90deg);
+	transform-origin: 0 0;
+	width: 100vh;
+	height: 100vw;
+	left: 0;
+	top: 100%;
+}
+.container2 {
+	transform-origin: 50% 50%;
+	bottom: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+.container2.flip {
+	transform: scale(-1, -1);
+}
 .background {
 	position: absolute;
 	z-index: -1;
@@ -61,10 +68,13 @@ body {
 .game {
 	.header {
 		box-sizing: border-box;
-		padding-top: 12vh;
-		height: 32vh;
+		padding-top: 10vw;
+		height: 25vw;
 		color: black;
 		text-align: center;
+		display: flex;
+		gap: 3vh;
+		flex-direction: column;
 	}
 
 	h1 {
@@ -72,28 +82,30 @@ body {
 		padding: 0;
 		margin: 0;
 		font-size: 5vh;
-		letter-spacing: 1.4vh;
+		letter-spacing: 1vh;
+		line-height: 0.7;
 	}
 
 	h2 {
 		font-family: 'LEMONMILKPro-Regular';
 		padding: 0;
 		margin: 0;
-		font-size: 3vh;
-		letter-spacing: 1.4vh;
+		font-size: 2vw;
+		letter-spacing: 0.7vh;
+		line-height: 0.7;
 	}
 
 	.cards {
 		display: grid;
-		grid-template-columns: repeat(5, 1fr);
-		gap: 2vh;
-		height: 50vh;
-		width: calc(50vh / 3 * 7);
+		grid-template-columns: repeat(2, 1fr);
+		gap: 1.5vw;
+		height: 64vw;
+		width: 30vw;
 		margin: 0 auto;
 	}
 
 	.card {
-		perspective: 100vh;
+		perspective: 100vw;
 	}
 
 	.card-body {
@@ -147,7 +159,7 @@ body {
 
 	.card-front,
 	.card-back {
-		box-shadow: 0.5vh 0.1vh 1vh 0 rgba(65, 66, 66, 0.55);
+		box-shadow: 0.5vw 0.1vw 1vw 0 rgba(65, 66, 66, 0.55);
 		display: flex;
 		align-items: center;
 		background-color: white;
@@ -191,81 +203,117 @@ body {
 		filter: invert(100%);
 	}
 	.infoText {
+		text-align: center;
 		position: fixed;
 		left: 50%;
 		top: 50%;
 		transform: translate(-50%, -50%);
 		font-family: 'LEMONMILKPro-Regular';
-		font-size: 5vh;
+		font-size: 3vw;
 		text-transform: uppercase;
 		color: #c26b00;
-		text-stroke: black 0.2vh;
-		-webkit-text-stroke: black 0.2vh;
-		padding: 2vh;
+		text-stroke: black 0.1vw;
+		-webkit-text-stroke: #0008 0.1vw;
+		padding: 2vw;
 		background: #fffa;
 	}
 }
-video {
-	position: fixed;
-	left: 0;
-	top: 0;
-	width: 100vw;
-	height: 100vh;
-}
 
-.button {
-	display: inline-block;
-	border-radius: 100px;
-	background-color: #c26b00;
-	border: white 0.5vh solid;
-	outline: #c26b00 0.5vh solid;
-	font-size: 3vh;
-	text-transform: uppercase;
-	padding: 1vh 4vh;
-	min-width: 12vh;
-	margin: 0 auto;
-	box-shadow: 0 0 1vh 0.5vh #c26b00;
-	color: white;
-}
+.video {
+	video {
+		position: fixed;
+		left: 100%;
+		top: 0;
+		width: 100vw;
+		height: 100vh;
+		transform: rotate(90deg);
+		transform-origin: 0 0;
+	}
 
-.buttonsWrapper {
-	position: absolute;
-	left: 0;
-	width: 100%;
-	bottom: 20vh;
-}
-
-.description {
-	color: black;
-	p {
-		font-family: 'Futura-Light';
-		font-size: 3vh;
-		padding: 1vh;
-	}
-	h3 {
-		font-family: 'LEMONMILKPro-Regular';
-		font-size: 2vh;
-		text-transform: uppercase;
-	}
-	h1 {
-		color: #c26b00;
-		font-family: 'LEMONMILKPro-Regular';
-		font-size: 5vh;
-		text-transform: uppercase;
-	}
-	h2 {
-		font-family: 'LEMONMILKPro-Regular';
-		font-size: 5vh;
-		text-transform: uppercase;
-	}
-	.buttons {
-		display: inline-flex;
-		gap: 10vh;
-	}
 	.buttonsWrapper {
 		position: absolute;
 		left: 0;
 		width: 100%;
-		bottom: 20vh;
+		bottom: 20vw;
+		display: flex;
+		justify-content: center;
 	}
+}
+
+.description {
+	box-sizing: border-box;
+	color: black;
+	text-align: center;
+	height: 100vw;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 2vw;
+	padding: 3vw 2vw;
+
+	p {
+		font-family: 'Futura-Medium';
+		font-size: 2.2vw;
+		padding: 0;
+		margin: 0;
+	}
+	.wineName {
+		display: flex;
+		gap: 1vw;
+	}
+	h3 {
+		font-family: 'LEMONMILKPro-Regular';
+		font-size: 2vw;
+		text-transform: uppercase;
+		margin: 0;
+	}
+	h1 {
+		color: #c26b00;
+		font-family: 'LEMONMILKPro-Bold';
+		padding: 0;
+		margin: 0;
+		font-size: 5vh;
+		letter-spacing: 1vh;
+		line-height: 0.7;
+		text-transform: uppercase;
+	}
+	h2 {
+		font-family: 'LEMONMILKPro-Bold';
+		padding: 0;
+		margin: 0;
+		font-size: 5vh;
+		letter-spacing: 1vh;
+		line-height: 0.7;
+		text-transform: uppercase;
+	}
+	img {
+		margin: 2vw 0;
+		height: 37vw;
+	}
+	.buttons {
+		display: inline-flex;
+		gap: 10vw;
+	}
+	.buttonsWrapper {
+		margin-top: 5vw;
+		display: flex;
+		justify-content: center;
+	}
+}
+
+.button {
+	text-align: center;
+	display: inline-block;
+	border-radius: 100px;
+	background-color: #c26b00;
+	border: white 0.3vw solid;
+	outline: #c26b00 0.5vw solid;
+	font-size: 2vw;
+	text-transform: uppercase;
+	padding: 0.6vw 2vw;
+	min-width: 12vw;
+	margin: 0 auto;
+	box-shadow: 0 0 0.6vw 0.3vw #c26b00;
+	color: white;
 }
